# cuid-generator

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-app/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
