[package]
name = "cuid-generator"
version = "0.1.0"
description = "A Tauri App for generating CUID2 identifiers"
authors = ["you"]
edition = "2021"

[lib]
name = "cuid_generator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
cuid2 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
